# ai-sherbert

./: README.md  llms.txt  pyproject.toml
docs/: orange-sherbert.md  sherbert-pdf.md
src/: db.sqlite3
src/example/: models.py  settings.py  urls.py  views.py
src/example/migrations/: 0008_alter_book_options.py
src/example/templates/example/: book_side_card.html  pdf_index.html
src/orange_sherbert/: view.py
src/orange_sherbert/templates/orange_sherbert/: base.html  create.html  delete.html  detail.html  list.html  update.html
src/orange_sherbert/templates/orange_sherbert/includes/: form_field.html  formset_sequential.html
src/orange_sherbert/templatetags/: sherbert_tags.py
src/sherbert_pdf/: access.py  api.py  apps.py  models.py  schemas.py  urls.py  views.py
src/sherbert_pdf/migrations/: 0001_initial.py
src/sherbert_pdf/static/sherbert_pdf/: api.js  editor.css  editor.js
src/sherbert_pdf/templates/sherbert_pdf/: editor.html
src/test/: test_editor_e2e.py  test_editor_view.py  test_sherbert_pdf.py  test_sherbert_pdf_api.py  tests.py
