[project]
name = "orange-sherbert"
version = "0.1.0"
description = "Declarative CRUD views for Django with HTMX-powered inline formsets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-htmx>=1.27.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orange_sherbert*"]

[tool.setuptools.package-data]
orange_sherbert = ["templates/**/*.html"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "example.settings"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.9.0",
    "playwright>=1.56.0",
    "ruff>=0.15.12",
    "mypy",
    "django-stubs",
]
